--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Couple Tracker</title>
   <meta charset="UTF-8" />
-  <style>
+  <style>https://github.com/khakimstudio/latihansoal/blob/main/index.html
     #map { height: 400px; width: 100%; }
     body { font-family: sans-serif; padding: 20px; }
     input { margin: 5px 0; padding: 5px; }
