--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
   <header>
-    <div>Kuis Kepemiluan</div>
+    <div>KUIS KASI PEMERINTAHAN</div>
     <div id="timer">60:00</div>
   </header>
 
